# webcarga-dev

./: .gitignore
poc_wingsuite/: .gitignore  config.py  main.py  pyproject.toml  schemas.py  wingsuite_scraper.py
poc_wingsuite/codigo_fuente/: codigo_fuente1.html  codigo_fuente2.html  codigo_fuente3.html  codigo_fuente4_reporte.html  error_login_wingsuite.html  error_wingsuite.html
poc_wingsuite/source/: pyvenv.cfg
