[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-wingsuite"
version = "0.1.0"
description = "Prueba de concepto para extracción de WingSuite"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0.post1",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "playwright==1.40.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[tool.setuptools]
py-modules = ["main", "config", "schemas", "wingsuite_scraper"]